--- a/developer/02BasicLayouts/layouts/app/src/main/res/values/strings.xml
+++ b/developer/02BasicLayouts/layouts/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="search">Search</string>
     <string name="ab1_inversions">Inversions</string>
     <string name="fc2_nature_meditations">Nature meditations</string>
+    <string name="align_your_body">Align Your Body</string>
 </resources>
