--- a/developer/02BasicLayouts/layouts/app/src/main/res/values/strings.xml
+++ b/developer/02BasicLayouts/layouts/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="ab1_inversions">Inversions</string>
     <string name="fc2_nature_meditations">Nature meditations</string>
     <string name="align_your_body">Align Your Body</string>
+    <string name="favorite_collections">Favorite Collections</string>
+    <string name="bottom_nav_home">Home</string>
+    <string name="bottom_nav_profile">Profile</string>
 </resources>
